<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessLeaf">

        <Button
            android:id="@+id/btnFlashLight"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:text="@string/txt_flash_light"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:id="@+id/btnFlashCalls"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/txt_flash_calls"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:id="@+id/btnFlashSMS"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/txt_flash_sms"
            android:textSize="@dimen/_14sdp" />

        <Button
            android:id="@+id/btnFlashNotification"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/txt_flash_notification"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>