<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.light.FlashLightActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessLeaf,UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_turn_on_flash"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/tvTimeOnFlash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1.0s" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/sbTimeOn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical"
            tools:ignore="UselessLeaf,UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_turn_off_flash"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:id="@+id/tvTimeOffFlash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="1.0s" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/sbTimeOff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnTest"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/txt_test"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>